Fix text margins for Brand and Print pages on mobile version

--- a/css/brand-and-print-responsive.css
+++ b/css/brand-and-print-responsive.css
@@ -37,7 +37,7 @@
   /* Internet Explorer */
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   width: 40%;
-  margin: 29.5% auto 0 -16%;
+  margin: 31% auto 0 -16%;
   }
 
   .project-title-mobile {
@@ -62,7 +62,7 @@
     /* Internet Explorer */
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
     width: 40%;
-    margin: 35% auto 0 -15.5%;
+    margin: 34% auto 0 -15.5%;
   }
 
   .project-title-right-mobile {
